--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
    "name": "linacqa",
    "description": "Linac QA Web App",
    "version": "0.0.1",
+   "main": "app/server.js",
    "dependencies": {
       "express": "3.x",
       "hbs": "*",
